Assertive/Language/AssertiveParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/dev/private/Assertive/Assertive/Language/AssertiveParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class AssertiveParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		VAR=1, INT=2, BOOL=3, IF=4, ELSE=5, WHILE=6, LOOP=7, FROM=8, TO=9, PARALLEL=10, 
		EACH=11, IN=12, ASSERT=13, COLON=14, SEMICOLON=15, EQUALS=16, NOTEQUALS=17, 
		AND=18, OR=19, NOT=20, LESSOREQUALTHAN=21, MOREOREQUALTHAN=22, LESSTHAN=23, 
		MORETHAN=24, PLUS=25, MINUS=26, MULTIPLY=27, DIVIDE=28, LPAREN=29, RPAREN=30, 
		DOUBLELBRACE=31, DOUBLERBRACE=32, LBRACE=33, RBRACE=34, LBRACK=35, RBRACK=36, 
		COMMA=37, HOST_SECTION=38, PATH_SECTION=39, QUERY_SECTION=40, HEADER_SECTION=41, 
		BODY_SECTION=42, DEF=43, RETURN=44, BREAK=45, CONTINUE=46, IMPORT=47, 
		OUT=48, STRING=49, FORMURLENCODED=50, FORMDATA=51, STREAM=52, GET=53, 
		POST=54, PUT=55, DELETE=56, PATCH=57, OPTIONS=58, HEAD=59, TRACE=60, CONNECT=61, 
		ID=62, DQUOTE=63, SQUOTE=64, LINECOMMENT=65, BLOCK_COMMENT=66, WS=67, 
		DQUOTE_START_EXPRESSION=68, DQUOTE_LBRACE=69, DQUOTE_ESCAPE_SEQUENCE=70, 
		DQUOTE_TEXT=71, SQUOTE_START_EXPRESSION=72, SQUOTE_LBRACE=73, SQUOTE_ESCAPE_SEQUENCE=74, 
		SQUOTE_TEXT=75;
	public const int
		RULE_program = 0, RULE_importStatements = 1, RULE_statement = 2, RULE_expression = 3, 
		RULE_unaryOperator = 4, RULE_binaryLogicalOperator = 5, RULE_binaryArithmeticOperator = 6, 
		RULE_assignmentStatement = 7, RULE_importStatement = 8, RULE_returnStatement = 9, 
		RULE_breakStatement = 10, RULE_continueStatement = 11, RULE_assertStatement = 12, 
		RULE_outputStatement = 13, RULE_ifStatement = 14, RULE_ifBody = 15, RULE_loopStatement = 16, 
		RULE_whileStatement = 17, RULE_eachStatement = 18, RULE_httpMethod = 19, 
		RULE_requestInvocation = 20, RULE_requestInvocationStatement = 21, RULE_querySection = 22, 
		RULE_headerSection = 23, RULE_dictionary = 24, RULE_dictionaryEntry = 25, 
		RULE_bodySection = 26, RULE_functionStatement = 27, RULE_functionParameterList = 28, 
		RULE_functionParam = 29, RULE_functionInvocation = 30, RULE_functionInvocationStatement = 31, 
		RULE_string = 32, RULE_stringContent = 33;
	public static readonly string[] ruleNames = {
		"program", "importStatements", "statement", "expression", "unaryOperator", 
		"binaryLogicalOperator", "binaryArithmeticOperator", "assignmentStatement", 
		"importStatement", "returnStatement", "breakStatement", "continueStatement", 
		"assertStatement", "outputStatement", "ifStatement", "ifBody", "loopStatement", 
		"whileStatement", "eachStatement", "httpMethod", "requestInvocation", 
		"requestInvocationStatement", "querySection", "headerSection", "dictionary", 
		"dictionaryEntry", "bodySection", "functionStatement", "functionParameterList", 
		"functionParam", "functionInvocation", "functionInvocationStatement", 
		"string", "stringContent"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'if'", "'else'", "'while'", "'loop'", "'from'", 
		"'to'", "'parallel'", "'each'", "'in'", "'assert'", "':'", "';'", "'='", 
		"'!='", "'and'", "'or'", "'not'", "'<='", "'>='", "'<'", "'>'", "'+'", 
		"'-'", "'*'", "'/'", "'('", "')'", null, "'}}'", null, "'}'", "'['", "']'", 
		"','", "'host'", "'path'", "'query'", "'headers'", "'body'", "'def'", 
		"'return'", "'break'", "'continue'", "'import'", "'out'", "'string'", 
		"'formurlencoded'", "'formdata'", "'stream'", "'GET'", "'POST'", "'PUT'", 
		"'DELETE'", "'PATCH'", "'OPTIONS'", "'HEAD'", "'TRACE'", "'CONNECT'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "VAR", "INT", "BOOL", "IF", "ELSE", "WHILE", "LOOP", "FROM", "TO", 
		"PARALLEL", "EACH", "IN", "ASSERT", "COLON", "SEMICOLON", "EQUALS", "NOTEQUALS", 
		"AND", "OR", "NOT", "LESSOREQUALTHAN", "MOREOREQUALTHAN", "LESSTHAN", 
		"MORETHAN", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "LPAREN", "RPAREN", 
		"DOUBLELBRACE", "DOUBLERBRACE", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
		"COMMA", "HOST_SECTION", "PATH_SECTION", "QUERY_SECTION", "HEADER_SECTION", 
		"BODY_SECTION", "DEF", "RETURN", "BREAK", "CONTINUE", "IMPORT", "OUT", 
		"STRING", "FORMURLENCODED", "FORMDATA", "STREAM", "GET", "POST", "PUT", 
		"DELETE", "PATCH", "OPTIONS", "HEAD", "TRACE", "CONNECT", "ID", "DQUOTE", 
		"SQUOTE", "LINECOMMENT", "BLOCK_COMMENT", "WS", "DQUOTE_START_EXPRESSION", 
		"DQUOTE_LBRACE", "DQUOTE_ESCAPE_SEQUENCE", "DQUOTE_TEXT", "SQUOTE_START_EXPRESSION", 
		"SQUOTE_LBRACE", "SQUOTE_ESCAPE_SEQUENCE", "SQUOTE_TEXT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AssertiveParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static AssertiveParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AssertiveParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AssertiveParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public ImportStatementsContext imports;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(AssertiveParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementsContext importStatements() {
			return GetRuleContext<ImportStatementsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			_localctx.imports = importStatements();
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & -4296891441343383L) != 0)) {
				{
				{
				State = 69;
				statement();
				}
				}
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 75;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportStatementsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementContext[] importStatement() {
			return GetRuleContexts<ImportStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementContext importStatement(int i) {
			return GetRuleContext<ImportStatementContext>(i);
		}
		public ImportStatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importStatements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportStatementsContext importStatements() {
		ImportStatementsContext _localctx = new ImportStatementsContext(Context, State);
		EnterRule(_localctx, 2, RULE_importStatements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IMPORT) {
				{
				{
				State = 77;
				importStatement();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OutputStatementContext outputStatement() {
			return GetRuleContext<OutputStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionStatementContext functionStatement() {
			return GetRuleContext<FunctionStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BreakStatementContext breakStatement() {
			return GetRuleContext<BreakStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueStatementContext continueStatement() {
			return GetRuleContext<ContinueStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionInvocationStatementContext functionInvocationStatement() {
			return GetRuleContext<FunctionInvocationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RequestInvocationStatementContext requestInvocationStatement() {
			return GetRuleContext<RequestInvocationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentStatementContext assignmentStatement() {
			return GetRuleContext<AssignmentStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileStatementContext whileStatement() {
			return GetRuleContext<WhileStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopStatementContext loopStatement() {
			return GetRuleContext<LoopStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EachStatementContext eachStatement() {
			return GetRuleContext<EachStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssertStatementContext assertStatement() {
			return GetRuleContext<AssertStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case OUT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 83;
				outputStatement();
				}
				break;
			case DEF:
				EnterOuterAlt(_localctx, 2);
				{
				State = 84;
				functionStatement();
				}
				break;
			case RETURN:
				EnterOuterAlt(_localctx, 3);
				{
				State = 85;
				returnStatement();
				}
				break;
			case BREAK:
				EnterOuterAlt(_localctx, 4);
				{
				State = 86;
				breakStatement();
				}
				break;
			case CONTINUE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 87;
				continueStatement();
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 6);
				{
				State = 88;
				functionInvocationStatement();
				}
				break;
			case GET:
			case POST:
			case PUT:
			case DELETE:
			case PATCH:
			case OPTIONS:
			case HEAD:
			case TRACE:
			case CONNECT:
			case DQUOTE:
			case SQUOTE:
				EnterOuterAlt(_localctx, 7);
				{
				State = 89;
				requestInvocationStatement();
				}
				break;
			case VAR:
				EnterOuterAlt(_localctx, 8);
				{
				State = 90;
				assignmentStatement();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 9);
				{
				State = 91;
				ifStatement();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 10);
				{
				State = 92;
				whileStatement();
				}
				break;
			case LOOP:
				EnterOuterAlt(_localctx, 11);
				{
				State = 93;
				loopStatement();
				}
				break;
			case EACH:
				EnterOuterAlt(_localctx, 12);
				{
				State = 94;
				eachStatement();
				}
				break;
			case ASSERT:
				EnterOuterAlt(_localctx, 13);
				{
				State = 95;
				assertStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParenthesesExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(AssertiveParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(AssertiveParser.RPAREN, 0); }
		public ParenthesesExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenthesesExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RequestInvocationExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public RequestInvocationContext requestInvocation() {
			return GetRuleContext<RequestInvocationContext>(0);
		}
		public RequestInvocationExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRequestInvocationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DictionaryExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(AssertiveParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DictionaryContext dictionary() {
			return GetRuleContext<DictionaryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(AssertiveParser.RBRACE, 0); }
		public DictionaryExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDictionaryExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BinaryLogicalExpressionContext : ExpressionContext {
		public ExpressionContext operandLeft;
		public ExpressionContext operandRight;
		[System.Diagnostics.DebuggerNonUserCode] public BinaryLogicalOperatorContext binaryLogicalOperator() {
			return GetRuleContext<BinaryLogicalOperatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public BinaryLogicalExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryLogicalExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnaryLogicalExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public UnaryOperatorContext unaryOperator() {
			return GetRuleContext<UnaryOperatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public UnaryLogicalExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryLogicalExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BinaryArithmeticExpressionContext : ExpressionContext {
		public ExpressionContext operandLeft;
		public ExpressionContext operandRight;
		[System.Diagnostics.DebuggerNonUserCode] public BinaryArithmeticOperatorContext binaryArithmeticOperator() {
			return GetRuleContext<BinaryArithmeticOperatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public BinaryArithmeticExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryArithmeticExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VarExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(AssertiveParser.VAR, 0); }
		public VarExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public StringExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ListExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACK() { return GetToken(AssertiveParser.LBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACK() { return GetToken(AssertiveParser.RBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(AssertiveParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(AssertiveParser.COMMA, i);
		}
		public ListExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumericExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(AssertiveParser.INT, 0); }
		public NumericExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumericExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctionInvocationExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionInvocationContext functionInvocation() {
			return GetRuleContext<FunctionInvocationContext>(0);
		}
		public FunctionInvocationExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionInvocationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BoolExpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(AssertiveParser.BOOL, 0); }
		public BoolExpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssertiveParserVisitor<TResult> typedVisitor = visitor as IAssertiveParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}

	private ExpressionContext expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExpressionContext _localctx = new ExpressionContext(Context, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				_localctx = new VarExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 99;
				Match(VAR);
				}
				break;
			case 2:
				{
				_localctx = new NumericExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 100;
				Match(INT);
				}
				break;
			case 3:
				{
				_localctx = new BoolExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 101;
				Match(BOOL);
				}
				break;
			case 4:
				{
				_localctx = new StringExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 102;
				@string();
				}
				break;
			case 5:
				{
				_localctx = new DictionaryExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 103;
				Match(LBRACE);
				State = 104;
				dictionary();
				State = 105;
				Match(RBRACE);
				}
				break;
			case 6:
				{
				_localctx = new ListExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 107;
				Match(LBRACK);
				State = 116;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & -4503577883574265L) != 0)) {
					{
					State = 108;
					expression(0);
					State = 113;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMMA) {
						{
						{
						State = 109;
						Match(COMMA);
						State = 110;
						expression(0);
						}
						}
						State = 115;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}
